java upgrade and resources from classpath